<resources>
    <string name="app_name">FamiSalud</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="Sede">sede</string>{

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <!-- Agregar los textos aquí -->
    <string name="notificacion">Notificación</string>
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="farmacia">Farmacia</string>
    <string name="profile_image">imagen de perfil\n</string>
    <string name="none">none:</string>
    <string name="cci">CCI:</string>
    <string name="n_mero_de_cuenta">Número de cuenta:</string>
    <string name="metodo">Metodo:</string>
    <string name="esto_es_un_texto">Esto es un texto</string>
    <string name="simple_bot_n">Simple Botón</string>
    <string name="simple_bot_n_secudario">simple botón secudario</string>
</resources>