<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.famisalud.famisalud.ui.home.HomeFragment"
        android:label="@string/inicio"
        tools:layout="@layout/fragment_home" />
<!--
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.famisalud.famisalud.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
-->
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.famisalud.famisalud.ui.notifications.NotificationsFragment"
        android:label="@string/notificacion"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.famisalud.famisalud.ui.profile.ProfileFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_drugstore"
        android:name="com.famisalud.famisalud.ui.drugstore.DrugstoreFragment"
        android:label="@string/farmacia"
        tools:layout="@layout/fragment_drugstore" />

    <fragment
        android:id="@+id/navigation_famicard"
        android:name="com.famisalud.famisalud.ui.Famicard.FamicardFragment"
        android:label="@string/famicard"
        tools:layout="@layout/fragment_famicard"
        />
</navigation>
