<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notificacion" /> -->

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/inicio" />
    <!--
        <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_dashboard" />
            -->
    <item
        android:id="@+id/navigation_drugstore"
        android:icon="@drawable/baseline_store_24"
        android:title="@string/farmacia" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/perfil" />

    <item
        android:id="@+id/navigation_famicard"
        android:icon="@drawable/baseline_add_card_24"
        android:title="@string/famicard"
        />

</menu>