<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="20dp"
    android:elevation="18dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:paddingEnd="10dp"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/ivMetodoPagoImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/perfil"
            android:scaleType="centerInside" />
        <!--        android:scaleType="centerInside"-->
        <!--        android:scaleType="centerCrop"-->
        <!--        android:scaleType="fitXY"-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/metodo"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvbancoMetodoPago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5dp"
                android:text="@string/none"
                android:textColor="@color/black"

                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n_mero_de_cuenta"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />


        </LinearLayout>

        <TextView
            android:id="@+id/tvnumeroMetodoPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:text="@string/none"
            android:textColor="@color/black"

            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cci"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvcciMetodoPago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5dp"
                android:text="@string/none"
                android:textColor="@color/black"

                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>